--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Source Sans Pro", system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
+}
+/* line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -66,4 +68,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
